<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Hydra</string>
    <string name="permissions_read_courses">Minerva-vakken lezen</string>
    <string name="permissions_read_courses_desc">
        Staat apps toe om de lijst van Minerva-vakken te lezen en informatie over de vakken te lezen.
    </string>
    <string name="title_activity_hydra_web_view">Web View</string>
    <string name="action_refresh">Vernieuwen</string>
    <string name="action_view_website">Website bekijken</string>
    <string name="action_open_browser">Bekijken in browser</string>
    <string name="action_view_settings">Instellingen</string>
    <string name="action_view_link">Link openen</string>
    <string name="action_view_files">Bestanden bekijken</string>
    <string name="action_again">Opnieuw</string>
    <string name="action_logout">Afmelden</string>
    <string name="action_drawer_open">Openen</string>
    <string name="action_drawer_close">Sluiten</string>
    <string name="action_turn_off">Uitschakelen</string>
    <string name="action_open_map">Kaart openen</string>
    <string name="action_send_mail">E-mailen</string>
    <string name="action_sync">Synchroniseren</string>
    <string name="action_search">Zoeken</string>
    <string name="action_mark_as_read">Markeren als gelezen</string>
    <string name="action_add_to_calendar">Toevoegen aan agenda</string>
    <string name="action_view_pdf">Pdf bekijken</string>
    <string name="action_share">Delen</string>
    <string name="action_undo">Ongedaan maken</string>
    <string name="selected_n" tools:ignore="PluralsCandidate">%d geselecteerd</string>
    <string name="select_all" translatable="false">@android:string/selectAll</string>
    <string name="select_none">Niets selecteren</string>
    <string name="error_network">Netwerkfout</string>
    <string name="error_no_activity">Niets gevonden om dit te openen!</string>
    <string name="drawer_title_feed">Overzicht</string>
    <string name="drawer_title_schamper">Schamper</string>
    <string name="drawer_title_resto">Resto</string>
    <string name="drawer_title_events">Evenementen</string>
    <string name="drawer_title_news">Nieuws</string>
    <string name="drawer_title_info">Info</string>
    <string name="drawer_title_minerva">Minerva</string>
    <string name="drawer_title_pref">Instellingen</string>
    <string name="drawer_title_urgent">Urgent.fm</string>
    <string name="drawer_title_library">Bibliotheken</string>
    <string name="shortcut_resto_short_label">Restomenu</string>
    <string name="shortcut_resto_long_label">Bekijk de restomenu</string>
    <string name="shortcut_resto_disabled">Uitgeschakeld</string>
    <string name="shortcut_minerva_short_label">Minerva</string>
    <string name="shortcut_minerva_long_label">Bekijk Minerva-dingen</string>
    <string name="shortcut_minerva_disabled">Uitgeschakeld</string>
    <string name="no_items">Geen items</string>
    <string name="date_now_until">Nu tot %s</string>
    <string name="date_between">%1$s tot %2$s</string>
    <string name="date_today">vandaag</string>
    <string name="date_tomorrow">morgen</string>
    <string name="date_overmorrow">overmorgen</string>
    <string name="date_next_x">volgende %s</string>
    <string name="deprecated_dot_separated">%1$s • %2$s</string>
    <string name="pref_overview_resto_title">Resto</string>
    <string name="pref_overview_resto_desc">Instellingen voor de studentenrestaurants</string>
    <string name="pref_overview_activities_title">Activiteiten</string>
    <string name="pref_overview_activities_desc">Opties voor de activiteiten</string>
    <string name="pref_overview_minerva_title">Minerva</string>
    <string name="pref_overview_minerva_desc">Opties voor de Minerva-integratie</string>
    <string name="pref_overview_sko_title">Student Kick-Off</string>
    <string name="pref_overview_sko_desc">SKO-opties</string>
    <string name="pref_overview_feed_title">Homefeed</string>
    <string name="pref_overview_feed_desc">Opties voor de homefeed</string>
    <string name="pref_overview_article_title">Artikels</string>
    <string name="pref_overview_article_desc">Opties voor de Schamper- en nieuwsartikels</string>
    <string name="pref_overview_about_title">Over</string>
    <string name="pref_overview_about_desc">Over de app</string>
    <string name="pref_overview_theme_title">Lay-out</string>
    <string name="pref_overview_theme_desc">Opties voor de lay-out van de app</string>
    <string name="pref_about_licenses_title">Openbronsoftware</string>
    <string name="pref_about_licenses_summary">Licentiedetails voor gebruikte bibliotheken</string>
    <string name="pref_about_version_title">Versie</string>
    <string name="pref_about_version_summary">Versie %1$s [%2$d] (%3$s)</string>
    <string name="pref_about_changelog_title">Wijzigingen</string>
    <string name="pref_about_changelog_summary">Bekijk wat er nieuw is</string>
    <string name="pref_about_creator_zeus">Gemaakt door Zeus WPI</string>
    <string name="pref_about_creator_dsa">In samenwerking met de Dienst StudentenActiviteiten</string>
    <string name="pref_about_issues_title">Feedback</string>
    <string name="pref_about_issues_summary">Meld fouten of geef suggesties</string>
    <string name="pref_licenses_title">Licenties</string>
    <string name="pref_theme_use_night_title">Nachtmodus gebruiken</string>
    <string name="pref_theme_night_mode_always">Altijd donker</string>
    <string name="pref_theme_night_mode_always_desc">Gebruik altijd het donkere thema.</string>
    <string name="pref_theme_night_mode_system">Systeemstandaard</string>
    <string name="pref_theme_night_mode_system_desc">Volg de systeemstandaard. Meestal is dit hetzelfde als "Altijd licht".</string>
    <string name="pref_theme_night_mode_never">Altijd licht</string>
    <string name="pref_theme_night_mode_never_desc">Gebruik altijd het lichte thema.</string>
    <string name="pref_theme_night_mode_auto">Automatisch kiezen</string>
    <string name="pref_theme_night_mode_auto_desc">Kies automatisch op basis van de tijd.</string>
    <string name="pref_theme_night_mode_restart">De wijzigingen worden van kracht nadat u de app herstart</string>
    <string name="pref_theme_night_mode_title">Instellingen</string>
    <string name="pref_theme_explanations">Uitleg over de modi</string>
    <string name="onboarding_welcome">Welkom bij Hydra</string>
    <string name="onboarding_welcome_description">Kies wat je wilt zien en doen in de app</string>
    <string name="onboarding_minerva_title">Minerva</string>
    <string name="onboarding_minerva_description">Meld je aan bij Minerva om je vakken te kunnen bekijken</string>
    <string name="onboarding_minerva_button">Aanmelden</string>
    <string name="onboarding_feed_title">Homefeed</string>
    <string name="onboarding_feed_desc">Kies wat je wilt zien in de homefeed</string>
    <string name="onboarding_reporting_title">Datagebruik</string>
    <string name="onboarding_reporting_desc">Wijzig hoe Hydra je data gebruikt</string>
    <string name="onboarding_reporting_analytics_title">Analytics</string>
    <string name="onboarding_reporting_analytics_desc">
        Sta toe dat Hydra anonieme gebruikersstatistieken verzamelt. We gebruiken dit om te weten hoeveel mensen Hydra gebruiken en waarvoor ze Hydra gebruiken.
    </string>
    <string name="onboarding_reporting_crash_title">Informatie over crashes</string>
    <string name="onboarding_reporting_crash_desc">
        Verstuur logboeken en andere nuttige (anonieme) informatie als de app crasht, zodat we het probleem zo snel mogelijk kunnen oplossen.
    </string>
    <string name="onboarding_reporting_allow">Toestaan</string>
    <string name="onboarding_reporting_disallow">Afwijzen</string>
    <string name="onboarding_reporting_allow_crash">Crashgegevens verzenden</string>
    <string name="onboarding_reporting_required">Kies of we anonieme Analytics mogen verzamelen</string>
    <string name="event_detail_activity_title">Evenement</string>
    <string name="event_detail_description_title">Beschrijving</string>
    <string name="event_detail_no_description">Geen beschrijving.</string>
    <string name="event_detail_no_location">Zonder locatie</string>
    <string name="event_detail_from">Van</string>
    <string name="event_detail_to">Tot</string>
    <string name="event_detail_precise_location">Precieze locatie: (%1$f, %2$f)</string>
    <string name="event_detail_date_unknown">Onbekend</string>
    <string name="event_no_data">Er zijn geen evenementen gevonden. Probeer eens de filters aan te passen.</string>
    <string name="event_pref_choose_associations_desc">Kies voor welke verenigingen activiteiten getoond moeten worden.</string>
    <string name="resto_pref_closing_hour_category_title">Sluitingsuur</string>
    <string name="resto_pref_closing_title">Sluitingsuur</string>
    <string name="resto_pref_closing_description">
        Kies vanaf welk uur de menu voor de volgende dag getoond wordt.
    </string>
    <string name="resto_pref_choice">Keuze resto</string>
    <string name="resto_pref_choice_title">Kies een resto in het overzicht</string>
    <string name="resto_extra_refresh_started">Vernieuwen…</string>
    <string name="resto_extra_breakfast">Ontbijt</string>
    <string name="resto_extra_desserts">Desserts</string>
    <string name="resto_extra_drinks">Drank</string>
    <string name="resto_extra_title">Overige</string>
    <string name="resto_extra_food_price">€ %s</string>
    <string name="resto_main_view_sandwiches">Broodjes</string>
    <string name="resto_main_view_locations">Resto\'s</string>
    <string name="resto_sandwich_activity_title">Belegde broodjes</string>
    <string name="resto_sandwich_price_medium">Groot: € %s</string>
    <string name="resto_sandwich_price_small">Klein: € %s</string>
    <string name="resto_sandwich_ingredients">Ingrediënten: %s.</string>
    <string name="resto_location_activity_title">Resto\'s</string>
    <string name="resto_location_action_center">Ga naar resto\'s</string>
    <string name="resto_menu_main_dish">Hoofdgerechten</string>
    <string name="resto_menu_soup">Soep</string>
    <string name="resto_menu_vegetables">Groenten</string>
    <string name="resto_menu_date">Datum van menu: %s</string>
    <string name="resto_menu_not_available">Er is geen menu of we konden hem niet ophalen. Misschien heb je meer geluk op de
        <a href="https://www.ugent.be/student/nl/meer-dan-studeren/resto">website van de resto\'s</a>.</string>
    <string name="resto_spinner_loading">Laden…</string>
    <string name="minerva_course_info_description">Beschrijving</string>
    <string name="minerva_course_info_name">Naam</string>
    <string name="minerva_course_info_code">Code</string>
    <string name="minerva_course_info_professor">Lesgever</string>
    <string name="minerva_course_info_year">Academiejaar</string>
    <string name="minerva_course_info_course_fiche">Studiefiche</string>
    <string name="minerva_course_info_course_fiche_warning">Merk op dat niet elk vak een studiefiche heeft.</string>
    <string name="feed_pref_card_types_title">Soorten kaarten</string>
    <string name="feed_pref_card_types_summary">Kies welke soort kaarten je wilt zien in de homefeed</string>
    <string name="feed_pref_data_saving_title">Databesparing</string>
    <string name="feed_pref_data_saving_summary">Bespaar data door geen nieuwe miniaturen te laden bij mobiele verbindingen</string>
    <string name="feed_pref_clear_cards_title">Verborgen kaarten wissen</string>
    <string name="feed_pref_clear_cards_summary">Wis de lijst van verborgen kaarten. Hierdoor zullen alle kaarten opnieuw getoond worden.</string>
    <string name="feed_pref_resto_kinds">Wat te tonen op de menu</string>
    <string name="library_action_open_catalogue">Catalogus openen</string>
</resources>