<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_theme_night_mode_title"
        app:iconSpaceReserved="false">
        <ListPreference
            app:iconSpaceReserved="false"
            app:key="pref_theme_night_mode"
            app:title="@string/pref_theme_use_night_title"
            app:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_theme_explanations"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_theme_battery"
            app:persistent="false"
            app:title="@string/pref_theme_night_mode_battery"
            app:summary="@string/pref_theme_night_mode_battery_desc" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="pref_theme_system"
            app:persistent="false"
            app:title="@string/pref_theme_night_mode_system"
            app:summary="@string/pref_theme_night_mode_system_desc" />

        <Preference
            app:iconSpaceReserved="false"
            app:persistent="false"
            app:title="@string/pref_theme_night_mode_never"
            app:summary="@string/pref_theme_night_mode_never_desc" />

        <Preference
            app:iconSpaceReserved="false"
            app:persistent="false"
            app:title="@string/pref_theme_night_mode_always"
            app:summary="@string/pref_theme_night_mode_always_desc" />

    </PreferenceCategory>
</PreferenceScreen>