<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Preference
        app:key="pref_about_version"
        app:persistent="false"
        app:summary="@string/pref_about_version_summary"
        app:title="@string/pref_about_version_title" />

    <Preference
        app:key="pref_about_changelog"
        app:persistent="false"
        app:summary="@string/pref_about_changelog_summary"
        app:title="@string/pref_about_changelog_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/ZeusWPI/hydra-android/releases" />
    </Preference>

    <Preference
        app:key="pref_about_issues"
        app:persistent="false"
        app:summary="@string/pref_about_issues_summary"
        app:title="@string/pref_about_issues_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/ZeusWPI/hydra-android/issues" />
    </Preference>

    <Preference
        app:allowDividerBelow="true"
        app:key="pref_about_licenses"
        app:persistent="false"
        app:summary="@string/pref_about_licenses_summary"
        app:title="@string/pref_about_licenses_title" />

    <Preference
        app:allowDividerAbove="true"
        app:iconSpaceReserved="true"
        app:key="pref_about_creator_zeus"
        app:persistent="false"
        app:singleLineTitle="false"
        app:title="@string/pref_about_creator_zeus"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://zeus.ugent.be" />
    </Preference>

    <Preference
        app:iconSpaceReserved="true"
        app:key="pref_about_creator_dsa"
        app:persistent="false"
        app:singleLineTitle="false"
        app:title="@string/pref_about_creator_dsa"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://student.ugent.be" />
    </Preference>

</PreferenceScreen>