<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2022 The Hydra authors
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_feed"
            android:icon="@drawable/tabs_home"
            android:title="@string/drawer_title_feed" />
        <item
            android:id="@+id/drawer_resto"
            android:icon="@drawable/tabs_resto"
            android:title="@string/drawer_title_resto" />
        <item
            android:id="@+id/drawer_events"
            android:icon="@drawable/tabs_events"
            android:title="@string/drawer_title_events" />
        <item
            android:id="@+id/drawer_schamper"
            android:icon="@drawable/tabs_schamper"
            android:title="@string/drawer_title_schamper" />
        <item
            android:id="@+id/drawer_urgent"
            android:icon="@drawable/tabs_urgent"
            android:title="@string/drawer_title_urgent" />
        <item
            android:id="@+id/drawer_library"
            android:icon="@drawable/tabs_library"
            android:title="@string/drawer_title_library" />
        <item
            android:id="@+id/drawer_news"
            android:icon="@drawable/tabs_news"
            android:title="@string/drawer_title_news" />
        <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/tabs_info"
            android:title="@string/drawer_title_info" />
        <item
            android:id="@+id/drawer_zeus"
            android:checkable="false"
            android:icon="@drawable/logo_zeus"
            android:title="@string/drawer_title_zeus" />
        <item
            android:id="@+id/drawer_ufora"
            android:checkable="false"
            android:icon="@drawable/tabs_ufora"
            android:title="@string/drawer_title_ufora" />
    </group>

    <group
        android:id="@+id/drawer_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_pref"
            android:checkable="false"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_title_pref" />
    </group>
</menu>
