<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_info_outline"
        app:summary="@string/resto_pref_closing_description"
        app:persistent="false"
        app:selectable="false" />

    <be.ugent.zeus.hydra.common.ui.widgets.TimePreference
        app:allowDividerBelow="true"
        app:key="pref_resto_closing_hour"
        app:useDefaultSummary="true"
        app:summary="@string/resto_pref_closing_description"
        app:title="@string/resto_pref_closing_title"
        app:defaultValue="21:00" />


    <ListPreference
        app:allowDividerAbove="true"
        app:key="pref_choice_resto_select"
        app:title="@string/resto_pref_choice"
		app:summary="%s"
        app:persistent="false" />

    <Preference
        app:allowDividerAbove="true"
        app:key="pref_choice_resto_select_loading"
        app:title="@string/resto_pref_choice"
        app:summary="@string/resto_pref_choice_title"
        app:persistent="false" />

</PreferenceScreen>