<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkbox_wrapper"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".onboarding.OnboardingActivity">

    <com.google.android.material.textview.MaterialTextView
        android:paddingTop="@dimen/large_horizontal_padding"
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_reporting_title"
        android:gravity="center"
        style="?textAppearanceHeadline4" />

    <com.google.android.material.textview.MaterialTextView
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="?textAppearanceSubtitle1"
        android:text="@string/onboarding_reporting_desc" />

    <com.google.android.material.textview.MaterialTextView
        android:height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Hydra.Text.Onboarding.Subhead"
        android:text="@string/onboarding_reporting_analytics_title" />

    <com.google.android.material.textview.MaterialTextView
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?textAppearanceBody2"
        android:text="@string/onboarding_reporting_analytics_desc" />

    <RadioGroup
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:paddingTop="@dimen/content_spacing"
        android:paddingBottom="@dimen/content_spacing"
        android:id="@+id/analyticsChooser"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/allowAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_reporting_allow"
            android:textColor="?colorOnSurface" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/disallowAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_reporting_disallow"
            android:textColor="?colorOnSurface" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Hydra.Text.Onboarding.Subhead"
        android:text="@string/onboarding_reporting_crash_title" />

    <com.google.android.material.textview.MaterialTextView
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?textAppearanceBody2"
        android:text="@string/onboarding_reporting_crash_desc" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:paddingTop="@dimen/content_spacing"
        android:paddingBottom="@dimen/content_spacing"
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:id="@+id/allowCrashReporting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textColor="?colorOnSurface"
        app:switchTextAppearance="?textAppearanceBody1"
        android:text="@string/onboarding_reporting_allow_crash" />

    <com.google.android.material.textview.MaterialTextView
        android:height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Hydra.Text.Onboarding.Subhead"
        android:text="@string/onboarding_reporting_privacy_policy_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/read_policy"
        android:layout_marginLeft="@dimen/vertical_padding"
        android:layout_marginRight="@dimen/vertical_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeColor="?colorSecondary"
        android:textColor="?colorSecondary"
        style="?materialButtonOutlinedStyle"
        android:text="@string/onboarding_reporting_privacy_policy_read" />

</LinearLayout>
